Bug 277643 - When splitting view, the first tab always gets selected.
Summary: When splitting view, the first tab always gets selected.
Status: RESOLVED FIXED
Alias: None
Product: kdevelop
Classification: Applications
Component: UI: tabbed pages (other bugs)
Version First Reported In: git master
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: 4.2.3
Assignee: kdevelop-bugs-null
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-07-12 19:26 UTC by Lambert Clara
Modified: 2011-07-25 13:05 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Lambert Clara 2011-07-12 19:26:14 UTC
Version:           git master
OS:                Linux

With more than one file opened, and the displayed file is not the first tab, splitting view automatically activates the first tab.

Reproducible: Always

Steps to Reproduce:
Start without any file opened in kdevelop :
1) open classA.h and classA.cpp files, and stay on the second tab (classA.cpp if you opened them in that order)
2) right click on the classA.cpp tab and press split view Left/Right


Actual Results:  
You get classA.h and classA.cpp on the left | classA.cpp on the right
classA.h is active on the left side

Expected Results:  
classA.cpp should have stayed active on the left side
Comment 1 Milian Wolff 2011-07-25 13:05:58 UTC
Git commit ab6b75080fecade90123661df13b60a4e0ba5750 by Milian Wolff, on behalf of Lambert CLARA.
Committed on 13/07/2011 at 00:58.
Pushed by mwolff into branch 'master'.

Fix auto selection of the first tab when splitting views. Add unit test.

BUG: 277643
REVIEW: 10193

M  +130  -13   sublime/tests/areaoperationtest.cpp
M  +9    -4    sublime/mainwindow_p.cpp
M  +5    -0    sublime/tests/areaoperationtest.h

http://commits.kde.org/kdevplatform/ab6b75080fecade90123661df13b60a4e0ba5750