Fix auto selection of the first tab when splitting views. Add unit test.

BUG: 277643
REVIEW: 10193